MDEV-15941 Explicit cursor FOR loop does not close the cursor