sql/sql_lex.cc
@@ -5891,6 +5891,26 @@ bool LEX::sp_for_loop_cursor_finalize(THD *thd, const Lex_for_loop_st &loop)
   return sp_while_loop_finalize(thd);
 }
 
+bool LEX::sp_for_loop_outer_block_finalize(THD *thd,
+                                           const Lex_for_loop_st &loop)
+{
+  Lex_spblock tmp;
+  tmp.curs= MY_TEST(loop.m_implicit_cursor);
+  if (unlikely(sp_block_finalize(thd, tmp))) // The outer DECLARE..BEGIN..END
+    return true;
+  if (!loop.is_for_loop_explicit_cursor())
+    return false;
+  /*
+    Explicit cursor FOR loop must close the cursor automatically.
+    Note, implicit cursor FOR loop does not need to close the cursor,
+    it's closed by sp_instr_cpop.
+  */
+  sp_instr_cclose *ic= new (thd->mem_root)
+                       sp_instr_cclose(sphead->instructions(), spcont,
+                                       loop.m_cursor_offset);
+  return ic == NULL || sphead->add_instr(ic);
+}
+
 /***************************************************************************/
 
 bool LEX::sp_declare_cursor(THD *thd, const LEX_CSTRING *name,
